adding change of title, change favicon for an original one and fix some bugs

--- a/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.html
@@ -1,4 +1,7 @@
+<app-tab-title title="authorization.register"></app-tab-title>
+
 <div class="auth-container">
     <app-authorization-form-registration class="form-container" [errors]="errors" title="{{'authorization.register' | translate}}"
     (formPost)="saveChanges($event)"></app-authorization-form-registration>
 </div>
+
