--- a/angular-myownweb/src/app/ui/pages/control-panel-page/main-control-panel/main-control-panel.component.html
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/main-control-panel/main-control-panel.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="controlPanel"></app-tab-title>
+
 <h2>{{"controlPanel" | translate}}</h2>
 
 <app-authorization rol="{{userRole.isAdmin}}">
