--- a/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.html
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="controlPanel.users"></app-tab-title>
+
 <h2>{{"controlPanel.users" | translate}}</h2>
 
 <app-generic-list [list]="users">
