--- a/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="createExperience"></app-tab-title>
+
 <app-create-entity
 [form]="experienceForm"
 indexRoute="/{{[urlStrings.urlControlPanel+ '/' +urlStrings.urlExperienceControlPanel]}}"
