--- a/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="editExperience"></app-tab-title>
+
 <app-edit-entity
 [form]="experienceForm"
 title="{{'editExperience' | translate}}"
