--- a/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="showStrings"></app-tab-title>
+
 <h2>{{'showStrings' | translate}}</h2>
 
 <mat-form-field class="mat-elevation-z8">
