--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me/about-me.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me/about-me.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="aboutMe"></app-tab-title>
+
 <!-- <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/C9S313lOQnL/?utm_source=ig_embed&amp;utm_campaign=loading"
     data-instgrm-version="14"
