--- a/angular-myownweb/src/app/ui/pages/authorization-page/login/login.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/login/login.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="authorization.login"></app-tab-title>
+
 <mat-grid-list [cols]="breakpoint" (window:resize)="onResize($event)">
     <mat-grid-tile>
         <ul>
