--- a/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.css
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.css
@@ -2,9 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translateY(50%);
+    margin-top: 5%;
 }
 
 .form-container{
