--- a/angular-myownweb/src/app/ui/pages/control-panel-page/experience-control-panel/experience-control-panel.component.html
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/experience-control-panel/experience-control-panel.component.html
@@ -1,3 +1,5 @@
+<app-tab-title title="experience"></app-tab-title>
+
 <app-index-entity title="{{'experience' | translate}}" 
 urlCreate="/{{[urlString.urlCreateExperience]}}" 
 urlEdit="/{{[urlString.urlEditExperience]}}"
