clean up code and fixing a bug about deleting user

--- a/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.html
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.html
@@ -41,7 +41,7 @@
                     <a mat-flat-button routerLink="{{urlStrings.urlEditClaims + '/' + element.username}}">{{"controlPanel.users.claim.edit" | translate}}</a>
                     <button mat-flat-button color="warn"
                         [swal]="{title: 'confirm' | translate, text: 'controlPanel.users.removePermision' | translate: {value: element.username}, showCancelButton: true}"
-                        (confirm)="remove(element.user)">
+                        (confirm)="remove(element.username)">
                         {{"delete" | translate}}
                     </button>
                 </td>
