--- a/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.html
@@ -1,7 +1,7 @@
 <app-tab-title title="authorization.register"></app-tab-title>
 
-<div class="auth-container">
-    <app-authorization-form-registration class="form-container" [errors]="errors" title="{{'authorization.register' | translate}}"
+<div class="walkever-section-container">
+    <app-authorization-form-registration class="walkever-box-container" [errors]="errors" title="{{'authorization.register' | translate}}"
     (formPost)="saveChanges($event)"></app-authorization-form-registration>
 </div>
 
