--- a/angular-myownweb/src/app/ui/pages/control-panel-page/main-control-panel/main-control-panel.component.html
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/main-control-panel/main-control-panel.component.html
@@ -41,6 +41,23 @@
         <mat-card class="card-container">
             <mat-card-header>
                 <mat-card-title>
+                    {{"controlPanel.aboutMe" | translate}}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                    {{"controlPanel.aboutMe.description" | translate}}
+            </mat-card-content>
+            <mat-card-actions>
+                <a mat-button routerLink="{{[urlStrings.urlAboutMeControlPanel]}}">
+                    <mat-icon>people</mat-icon>
+                    {{"modify" | translate}}
+                </a>
+            </mat-card-actions>
+        </mat-card>
+
+        <mat-card class="card-container">
+            <mat-card-header>
+                <mat-card-title>
                     {{"contactMe.inbox" | translate}}
                 </mat-card-title>
             </mat-card-header>
