finish front end for aboutme

--- a/angular-myownweb/src/app/ui/features/footer-menu/footer-menu.component.html
+++ b/angular-myownweb/src/app/ui/features/footer-menu/footer-menu.component.html
@@ -36,14 +36,14 @@
             <ng-container>
                 <button mat-raised-button (click)="translateText('es')">
                     <mat-icon>
-                        <img src="http://purecatamphetamine.github.io/country-flag-icons/3x2/MX.svg" />
+                        <img src="https://purecatamphetamine.github.io/country-flag-icons/3x2/MX.svg" />
                     </mat-icon>
                     {{'changeLanguage.es' | translate}}
                 </button>
 
                 <button mat-raised-button (click)="translateText('en')">
                     <mat-icon>
-                        <img src="http://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg" />
+                        <img src="https://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg" />
                     </mat-icon>
                     {{'changeLanguage.en' | translate}}
                 </button>
