--- a/angular-myownweb/src/app/ui/pages/about-me-page/create-about-me/create-about-me.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/create-about-me/create-about-me.component.html
@@ -2,4 +2,4 @@
 
 <app-create-entity [form]="aboutMeForm"
     indexRoute="/{{[urlStrings.urlControlPanel+ '/' +urlStrings.urlAboutMeControlPanel]}}"
-    title="{{'createExperience' | translate}}"></app-create-entity>
+    title="{{'aboutMe.create' | translate}}"></app-create-entity>
