--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
@@ -55,8 +55,13 @@
         <mat-error>{{getErrorTag()}}</mat-error>
     </mat-form-field>
 
+    <div style="margin-top: 1rem;"></div>
+
+    <app-input-img title="aboutMe.pictures" [urlCurrentsImages]="model?.pictures" 
+    (selectedFiles)="selectedFiles($event)"></app-input-img>
+
     <div class="container-Buttons">
         <button type="submit" mat-flat-button [disabled]="form.invalid">{{"save" | translate}}</button>
-        <a mat-stroked-button routerLink="/{{urlStrings.urlControlPanel+'/'+urlStrings.urlExperienceControlPanel}}">{{"cancel" | translate}}</a>
+        <a mat-stroked-button routerLink="/{{urlStrings.urlControlPanel+'/'+urlStrings.urlAboutMeControlPanel}}">{{"cancel" | translate}}</a>
     </div>
 </form>
