pausing the backend

--- a/angular-myownweb/src/app/ui/pages/main-page/main-page.component.html
+++ b/angular-myownweb/src/app/ui/pages/main-page/main-page.component.html
@@ -1,2 +1,2 @@
 <app-tab-title title="authorization.welcome"></app-tab-title>
-<h1>working</h1>
+<h1>For the moment I pause the backend so you will not able to see it</h1>
